# OOP_Laba_4

./: CMakeLists.txt  README.md  main.cpp
include/: array.hpp  figure.hpp  hexagon.hpp  pentagon.hpp  rhombus.hpp
tests/: test_hexagon.cpp  test_pentagon.cpp  test_rhombus.cpp
